--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,6 +1,6 @@
 {% extends '_base.html' %}
 
 {% block title %}Filmosaurus{% endblock title %}
-
 {% block body %}
+<h1>Bienvenue</h1>
 {% endblock body %}
