create navbar & adding section & background

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -2,5 +2,13 @@
 
 {% block title %}Filmosaurus{% endblock title %}
 {% block body %}
-<h1>Bienvenue</h1>
+<section id="welcome" class="home-section">
+
+</section>
+<section id="search" class="home-section">
+
+</section>
+<section id="about" class="home-section">
+    
+</section>
 {% endblock body %}
