--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -3,12 +3,12 @@
 {% block title %}Filmosaurus{% endblock title %}
 {% block body %}
 <section id="welcome" class="home-section">
-
+<h1>Bienvenue</h1>
 </section>
 <section id="search" class="home-section">
 
 </section>
 <section id="about" class="home-section">
-    
+
 </section>
 {% endblock body %}
