--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -3,12 +3,78 @@
 {% block title %}Filmosaurus{% endblock title %}
 {% block body %}
 <section id="welcome" class="home-section">
-<h1>Bienvenue</h1>
+    <div class="container">
+        <div class="row">
+            <div class='console-container'>
+                <span id='text'></span>
+                <div class='console-underscore' id='console'>&#95;</div>
+            </div>
+        </div>
+        <hr>
+        <div class="row welcome-row justify-content-center text-center">
+            <div type="button" data-bs-toggle="collapse" data-bs-target="#login_message" aria-expanded="true" aria-controls="login_message" id="login-block" class="col welcome-block col-lg-2 col-md-5 col-sm-10 col-xs-10">#1 Login</div>
+            <div type="button" data-bs-toggle="collapse" data-bs-target="#search_message" aria-expanded="true" aria-controls="search_message" id="search-block" class="col welcome-block col-lg-2 col-md-5 col-sm-10 col-xs-10">#2 Search</div>
+            <div type="button" data-bs-toggle="collapse" data-bs-target="#save_message" aria-expanded="false" aria-controls="save_message" id="save-block" class="col welcome-block col-lg-2 col-md-5 col-sm-10 col-xs-10">#3 Save</div>
+            <div type="button" data-bs-toggle="collapse" data-bs-target="#watch_message" aria-expanded="false" aria-controls="save_message" id="watch-block" class="col welcome-block col-lg-2 col-md-5 col-sm-10 col-xs-10">#4 Watch</div>
+        </div>
+        <div class="row">
+            <div class="offset-1 col-10">
+                <div class="collapse  welcome-collapse" id="login_message">
+                    <div class="card card-body">
+                        <div class="row">
+                            <div class="col-2">
+                                <span class="welcome-number-steps">#1</span>
+                            </div>
+                            <div class="col-10">
+                                The first step is to create an account. Go on the <a href="#">account creation page</a>, follow the instruction.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="collapse welcome-collapse" id="search_message">
+                    <div class="card card-body">
+                        <div class="row">
+                            <div class="col-2">
+                                <span class="welcome-number-steps">#2</span>
+                            </div>
+                            <div class="col-10">
+                                Then, go to the <a href="#search">search section</a> and type the movie you have in mind.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="collapse welcome-collapse" id="save_message">
+                    <div class="card card-body">
+                        <div class="row">
+                            <div class="col-2">
+                                <span class="welcome-number-steps">#3</span>
+                            </div>
+                            <div class="col-10">
+                                Once the movie chosen, save it to your watchlist. You can add several movies in order to plan your watching program !
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="collapse welcome-collapse" id="watch_message">
+                    <div class="card card-body">
+                        <div class="row">
+                            <div class="col-2">
+                                <span class="welcome-number-steps">#4</span>
+                            </div>
+                            <div class="col-10">
+                                Watch and enjoy ! but keep the most important in mind ... SVOD is good, but seeing films in a cinema, on the big screen, is better. <strong>Supports movie theaters</strong>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 <section id="search" class="home-section">
-
+    
 </section>
 <section id="about" class="home-section">
-
+    
 </section>
 {% endblock body %}
