--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Patua+One);
+
 @font-face {
     font-family: 'yorkwhiteletter';
     src: local('yorkwhiteletter'),
@@ -31,7 +33,7 @@
 .nav-link:hover {
     text-decoration: none;
     background-size: 100% 2px;
-  }
+}
 
 .home-section {
     height:100vh;
@@ -58,7 +60,7 @@
 }
 
 #about {
-    background-color: rgba(202, 121, 90);
+    background-color: rgba(143, 143, 143);
     padding-top: 10rem;
     padding-bottom: calc(10rem - 4.5rem);
     background: linear-gradient(to bottom, rgba(202, 121, 90, 0.5) 0%, rgba(202, 121, 90, 0.3) 100%), url("../images/home-section-3.jpg");
@@ -78,7 +80,68 @@
         background-color: rgba(121, 175, 175);
         padding:50px;
         padding-bottom: 20px;
-        border-radius: 10%;
+        border-radius: 5px 10px 15px 30px/30px 15px 10px 5px;
         box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
     }
+}
+
+.container{
+    width: 60%;
+    padding: 10px;
+    background:rgba(255,255,255, 0);
+}
+
+.container h3 {
+    font-family: 'Bungee Shade', cursive;
+}
+
+.welcome-row {
+    padding:5px;
+}
+.welcome-block {
+    padding:5px;
+    margin:5px;
+    color:rgba(244, 238, 214);
+    border-radius: 5px 10px 15px 30px/30px 15px 10px 5px;
+    background-color: rgba(186, 75, 64);
+    font-size: 20px;
+    font-family:'Audiowide', cursive;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+.hidden {
+    opacity:0;
+}
+.console-container {
+    
+    font-family:'Audiowide', cursive;
+    font-size:35px;
+    text-align:center;
+    width:600px;
+    display:block;
+    position:relative;
+    color:black;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    margin:auto;
+}
+.console-underscore {
+    display:inline-block;
+    position:relative;
+    top:-0.14em;
+    left:10px;
+}
+
+.welcome-number-steps {
+    font-size:30px;
+    font-weight: bold;
+    display: block;
+    padding:0;
+    text-align: center;
+}
+
+.welcome-collapse{
+    color:rgba(186, 75, 64);
 }
