--- a/static/css/base.css
+++ b/static/css/base.css
@@ -145,3 +145,27 @@
 .welcome-collapse{
     color:rgba(186, 75, 64);
 }
+
+.search-container{
+    font-family:'Audiowide', cursive;
+    font-size:35px;
+    text-align:center;
+}
+.search-title {
+    font-weight: bold;
+    color:whitesmoke !important;
+}
+.fancy-border {
+    background: #0B1319;
+    border: 25px solid #B88846;
+    border-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='75' height='75'%3E%3Cg fill='none' stroke='%23B88846' stroke-width='2'%3E%3Cpath d='M1 1h73v73H1z'/%3E%3Cpath d='M8 8h59v59H8z'/%3E%3Cpath d='M8 8h16v16H8zM51 8h16v16H51zM51 51h16v16H51zM8 51h16v16H8z'/%3E%3C/g%3E%3Cg fill='%23B88846'%3E%3Ccircle cx='16' cy='16' r='2'/%3E%3Ccircle cx='59' cy='16' r='2'/%3E%3Ccircle cx='59' cy='59' r='2'/%3E%3Ccircle cx='16' cy='59' r='2'/%3E%3C/g%3E%3C/svg%3E") 25;
+}
+.row-search{
+    font-family: 'Courier New', Courier, monospace;
+}
+.btn-search {
+    background: rgb(186, 75, 64);
+    color:whitesmoke;
+    font-size: 15px;
+    display: block;
+}
