create third section of home page about

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -90,7 +90,7 @@
                             </div>
                             <div class="col-lg-2 col-md-12 col-sm-12 col-12">
                                 <button type="submit" class=" form-control btn btn-search mb-3">Search</button>
-                              </div>
+                            </div>
                         </div>
                     </form>
                 </div>
@@ -99,6 +99,52 @@
     </div>
 </section>
 <section id="about" class="home-section">
-
+    <div class="container about-container">
+        <div class="row">
+            <div class="fancy-border">
+                <span class="search-title ">About</span>
+                <hr class="text-white">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="fancy-border">
+                            <p>                     
+                                my name is romain, I am a student at Openclassrooms. this website was created as part of the last project of the python developer training.
+                                Being passionate about cinema, it seemed obvious to me that this project should be done in this area.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="fancy-border fancy-social">
+                            <p>
+                                Social
+                                <hr>
+                                <div class="row">
+                                    <div class="col">
+                                        <i class="fab fa-facebook-square"></i>
+                                    </div>
+                                    <div class="col">
+                                        <i class="fab fa-twitter-square"></i>
+                                    </div>
+                                    <div class="col">
+                                        <i class="fab fa-github-square"></i>
+                                    </div>
+                                    <div class="col">
+                                        <i class="fab fa-instagram"></i>
+                                    </div>
+                                    <div class="col">
+                                        <i class="fab fa-reddit-square"></i>
+                                    </div>
+                                    <div class="col">
+                                        <i class="fab fa-snapchat-square"></i>
+                                    </div>
+                                </div>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <hr class="text-white">
+            </div>
+        </div>
+    </div>
 </section>
 {% endblock body %}
