--- a/static/css/base.css
+++ b/static/css/base.css
@@ -92,7 +92,7 @@
 }
 
 .container h3 {
-    font-family: 'Bungee Shade', cursive;
+    font-family:'Audiowide', cursive;
 }
 
 .welcome-row {
@@ -160,6 +160,11 @@
     border: 25px solid #B88846;
     border-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='75' height='75'%3E%3Cg fill='none' stroke='%23B88846' stroke-width='2'%3E%3Cpath d='M1 1h73v73H1z'/%3E%3Cpath d='M8 8h59v59H8z'/%3E%3Cpath d='M8 8h16v16H8zM51 8h16v16H51zM51 51h16v16H51zM8 51h16v16H8z'/%3E%3C/g%3E%3Cg fill='%23B88846'%3E%3Ccircle cx='16' cy='16' r='2'/%3E%3Ccircle cx='59' cy='16' r='2'/%3E%3Ccircle cx='59' cy='59' r='2'/%3E%3Ccircle cx='16' cy='59' r='2'/%3E%3C/g%3E%3C/svg%3E") 25;
 }
+.fancy-border p {
+    color: whitesmoke;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 20px;
+}
 .row-search{
     font-family: 'Courier New', Courier, monospace;
 }
@@ -168,4 +173,12 @@
     color:whitesmoke;
     font-size: 15px;
     display: block;
+}
+.about-container {
+    font-family:'Audiowide', cursive;
+    text-align: center;
+    font-size:35px;
+}
+.fab {
+    color: white;
 }
