home page finished

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -16,58 +16,80 @@
             </div>
         </div>
         <hr>
-        <div class="row welcome-row justify-content-center text-center">
-            <div type="button" data-bs-toggle="collapse" data-bs-target="#login_message" aria-expanded="true" aria-controls="login_message" id="login-block" class="col welcome-block col-lg-2 col-md-5 col-sm-10 col-xs-10 col-10">#1 Login</div>
-            <div type="button" data-bs-toggle="collapse" data-bs-target="#search_message" aria-expanded="true" aria-controls="search_message" id="search-block" class="col welcome-block col-lg-2 col-md-5 col-sm-10 col-xs-10 col-10">#2 Search</div>
-            <div type="button" data-bs-toggle="collapse" data-bs-target="#save_message" aria-expanded="false" aria-controls="save_message" id="save-block" class="col welcome-block col-lg-2 col-md-5 col-sm-10 col-xs-10 col-10">#3 Save</div>
-            <div type="button" data-bs-toggle="collapse" data-bs-target="#watch_message" aria-expanded="false" aria-controls="save_message" id="watch-block" class="col welcome-block col-lg-2 col-md-5 col-sm-10 col-xs-10 col-10">#4 Watch</div>
-        </div>
-        <div class="row d-none d-lg-block">
-            <div class="offset-1 col-10">
-                <div class="collapse  welcome-collapse" id="login_message">
-                    <div class="card card-body">
-                        <div class="row">
-                            <div class="col-1">
-                                <span class="welcome-number-steps">#1</span>
-                            </div>
-                            <div class="col-11">
-                                The first step is to create an account. Go on the <a href="#">account creation page</a>, follow the instruction.
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="collapse welcome-collapse" id="search_message">
-                    <div class="card card-body">
-                        <div class="row">
-                            <div class="col-1">
-                                <span class="welcome-number-steps">#2</span>
-                            </div>
-                            <div class="col-11">
-                                Then, go to the <a href="#search">search section</a> and type the movie you have in mind.
+        <div class="fancy-border">
+            <div class="row welcome-row justify-content-center text-center">
+                <div type="button" data-bs-toggle="collapse" data-bs-target="#login_message" data-bs-parent="#information" aria-expanded="false" aria-controls="login_message" id="login-block" class="col welcome-block col-lg-2 col-md-5 col-sm-10 col-xs-10 col-10">#1 Login</div>
+                <div type="button" data-bs-toggle="collapse" data-bs-target="#search_message" data-bs-parent="#information" aria-expanded="false" aria-controls="search_message" id="search-block" class="col welcome-block col-lg-2 col-md-5 col-sm-10 col-xs-10 col-10">#2 Search</div>
+                <div type="button" data-bs-toggle="collapse" data-bs-target="#save_message" data-bs-parent="#information" aria-expanded="false" aria-controls="save_message" id="save-block" class="col welcome-block col-lg-2 col-md-5 col-sm-10 col-xs-10 col-10">#3 Save</div>
+                <div type="button" data-bs-toggle="collapse" data-bs-target="#watch_message" data-bs-parent="#information" aria-expanded="false" aria-controls="save_message" id="watch-block" class="col welcome-block col-lg-2 col-md-5 col-sm-10 col-xs-10 col-10">#4 Watch</div>
+            </div>
+            <div class="row d-none d-lg-block">
+                <div class="col-12" id="display_data">
+                    <div class="collapse welcome-collapse show" id="login_message" data-bs-parent="#display_data">
+                        <hr class="text-white">
+                        <div class="card card-body card-step">
+                            <div class="row">
+                                <div class="fancy-border">
+                                    <div class="row">
+                                        <div class="col-1">
+                                            <span class="welcome-number-steps">#1</span>
+                                        </div>
+                                        <div class="col-11">
+                                            The first step is to create an account. Go on the <a href="#">account creation page</a>, follow the instruction.
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="collapse welcome-collapse" id="save_message">
-                    <div class="card card-body">
-                        <div class="row">
-                            <div class="col-1">
-                                <span class="welcome-number-steps">#3</span>
-                            </div>
-                            <div class="col-11">
-                                Once the movie chosen, save it to your watchlist. You can add several movies in order to plan your watching program !
+                    <div class="collapse welcome-collapse" id="search_message" data-bs-parent="#display_data">
+                        <hr class="text-white">
+                        <div class="card card-body card-step">
+                            <div class="row">
+                                <div class="fancy-border">
+                                    <div class="row">
+                                        <div class="col-1">
+                                            <span class="welcome-number-steps">#2</span>
+                                        </div>
+                                        <div class="col-11">
+                                            Then, go to the <a href="#search">search section</a> and type the movie you have in mind.
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="collapse welcome-collapse" id="watch_message">
-                    <div class="card card-body">
-                        <div class="row">
-                            <div class="col-1">
-                                <span class="welcome-number-steps">#4</span>
+                    <div class="collapse welcome-collapse" id="save_message" data-bs-parent="#display_data">
+                        <hr class="text-white">
+                        <div class="card card-body card-step">
+                            <div class="row">
+                                <div class="fancy-border">
+                                    <div class="row">
+                                        <div class="col-1">
+                                            <span class="welcome-number-steps">#3</span>
+                                        </div>
+                                        <div class="col-11">
+                                            Once the movie chosen, save it to your watchlist. You can add several movies in order to plan your watching program !
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col-11">
-                                Watch and enjoy ! but keep the most important in mind ... SVOD is good, but seeing films in a cinema, on the big screen, is better. <strong>Supports movie theaters</strong>
+                        </div>
+                    </div>
+                    <div class="collapse welcome-collapse" id="watch_message" data-bs-parent="#display_data">
+                        <hr class="text-white">
+                        <div class="card card-body card-step">
+                            <div class="row">
+                                <div class="fancy-border">
+                                    <div class="row">
+                                        <div class="col-1">
+                                            <span class="welcome-number-steps">#4</span>
+                                        </div>
+                                        <div class="col-11">
+                                            Watch and enjoy ! but keep the most important in mind ... SVOD is good, but seeing films in a cinema, on the big screen, is better. <strong>Supports movie theaters</strong>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -75,6 +97,7 @@
             </div>
         </div>
     </div>
+</div>
 </section>
 <section id="search" class="home-section">
     <div class="container">
@@ -105,10 +128,10 @@
                 <span class="search-title ">About</span>
                 <hr class="text-white">
                 <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 d-none d-lg-block">
                         <div class="fancy-border">
                             <p>                     
-                                my name is romain, I am a student at Openclassrooms. this website was created as part of the last project of the python developer training.
+                                my name is Romain, I am a student at Openclassrooms. this website was created as part of the last project of the python developer training.
                                 Being passionate about cinema, it seemed obvious to me that this project should be done in this area.
                             </p>
                         </div>
