--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,8 +1,11 @@
 {% load static %}
+<div class="fancy-border">
 <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand abs mt-3" href="#">
+            <div class="fancy-border">
             <span class="brand-text mt-5">Filmosaurus</span>
+            </div>
         </a>
         <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -33,3 +36,4 @@
         </div>
     </div>
 </nav>
+</div>
