--- a/static/css/base.css
+++ b/static/css/base.css
@@ -37,6 +37,16 @@
     height:100vh;
 }
 
+#auth {
+    background-color: rgba(114, 166, 169);
+    padding-top: 10rem;
+    padding-bottom: calc(10rem - 4.5rem);
+    background: linear-gradient(to bottom, rgba(114, 166, 169, 0.5) 0%, rgba(114, 166, 169, 0.3) 100%), url("../images/auth-section.jpeg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
 #welcome {
     background-color: rgba(114, 166, 169);
     padding-top: 15rem;
@@ -106,7 +116,6 @@
     opacity:0;
 }
 .console-container {
-    
     font-family: 'Rye', cursive;
     font-size:35px;
     text-align:center;
@@ -179,4 +188,27 @@
     background: #0B1319;
     color:white;
     font-family: 'Courier New', Courier, monospace;
+}
+.container-auth {
+    font-family: 'Rye', cursive;
+    font-size:20;
+    color:rgba(244, 238, 214);
+}
+.auth-button {
+    padding:5px;
+    margin-top:15px;
+    background: rgb(186, 75, 64);
+    color:rgba(244, 238, 214);
+    font-size:20px;
+    border-color: rgb(186, 75, 64);
+}
+.auth-form {
+    padding: 20px;
+}
+
+.auth-form input {
+    margin-bottom: 10px;
+}
+.asteriskField {
+    visibility: hidden;
 }
