--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,7 +2,7 @@
 <div class="fancy-border">
 <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand abs mt-3" href="#">
+        <a class="navbar-brand abs mt-3" href="{% url 'home' %}">
             <div class="fancy-border">
             <span class="brand-text mt-5">Filmosaurus</span>
             </div>
@@ -13,7 +13,7 @@
         <div class="navbar-collapse collapse" id="collapseNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="{% url 'home' %}">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Movies</a>
@@ -24,14 +24,23 @@
             </ul>
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="" data-bs-target="#" data-bs-toggle="modal">About</a>
+                    <a class="nav-link" href="" >About</a>
+                </li>
+                {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="" >Account</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="" data-bs-target="#" data-bs-toggle="modal">Login</a>
+                    <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'account_login' %}">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="" data-bs-target="#" data-bs-toggle="modal">Signup</a>
+                    <a class="nav-link" href="{% url 'account_signup' %}">Signup</a>
                 </li>
+                {% endif %}
             </ul>
         </div>
     </div>
