--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -4,13 +4,13 @@
 {% block body %}
 <section id="auth" class="home-section">
     <div class="container container-auth">
-        <h3 class="text-center">Login</h3>
+        <h3 class="text-center">Signup</h3>
         <hr>
         <div class="fancy-border">
             <form method="post" class="auth-form">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button type="submit" class="auth-button col-12">Log in</button>
+                <button type="submit" class="auth-button col-12">Confirm</button>
             </form>
         </div>
     </div>
