--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -4,6 +4,8 @@
 {% block body %}
 <section id="auth" class="home-section">
     <div class="container container-auth">
+        <h3 class="text-center">Signup</h3>
+        <hr>
         <div class="fancy-border">
             <form method="post" class="auth-form">
                 {% csrf_token %}
