--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -4,19 +4,14 @@
 {% block body %}
 <section id="auth" class="home-section">
     <div class="container container-auth">
-        <h3 class="text-center">Login</h3>
+        <h3 class="text-center">Reset password</h3>
         <hr>
         <div class="fancy-border">
             <form method="post" class="auth-form">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button type="submit" class="auth-button col-12">Log in</button>
+                <button type="submit" class="auth-button col-12">Send</button>
             </form>
-            <hr>
-            <div class="fancy-border m-1 text-center">
-                <a class="forgot-password" href="{% url 'account_reset_password' %}">forgot my password</a>
-            </div>
-            <hr>
         </div>
     </div>
 </section>
