add templates for password reset and email verification

--- a/templates/account/email_confirm.html
+++ b/templates/account/email_confirm.html
@@ -4,7 +4,7 @@
 {% block body %}
 <section id="auth" class="home-section">
     <div class="container container-auth">
-        <h3 class="text-center">Logout</h3>
+        <h3 class="text-center">Please confirm your Email adress</h3>
         <hr>
         <div class="fancy-border">
             <form method="post" class="auth-form">
