--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -4,7 +4,7 @@
 {% block body %}
 <section id="auth" class="home-section">
     <div class="container container-auth">
-        <h3 class="text-center">Logout</h3>
+        <h3 class="text-center">Do you want to logout ?</h3>
         <hr>
         <div class="fancy-border">
             <form method="post" class="auth-form">
