--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,7 @@
+body {
+    background: #0B1319;
+}
+
 @font-face {
     font-family: 'yorkwhiteletter';
     src: local('yorkwhiteletter'),
@@ -45,6 +49,11 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+}
+
+#results {
+    background-color: #0B1319;
+    padding-top: 5rem;
 }
 
 #welcome {
