--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,7 +19,7 @@
                     <a class="nav-link" href="#">Movies</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" data-bs-toggle="collapse">Search</a>
+                    <a class="nav-link" href="#search">Search</a>
                 </li>
             </ul>
             <ul class="navbar-nav ms-auto">
