--- a/movies/templates/movies/search_results.html
+++ b/movies/templates/movies/search_results.html
@@ -14,7 +14,7 @@
         </div>
         <div class="fancy-border">
             <div class="row">
-                <div class="pagination">
+                <div class="pagination col-6">
                     <span class="step-links">
                         {% if page_obj.has_previous %}
                         <a href="/movies/search/?page=1&q={{ query }}">&laquo; first</a>
